--- a/auth_simple_01/client/package.json
+++ b/auth_simple_01/client/package.json
@@ -11,10 +11,18 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
+    "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.12.2",
+    "framer-motion": "^12.23.19",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.63.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.1",
+    "react-type-animation": "^3.2.0",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
